[gd_scene load_steps=2 format=3 uid="uid://0syix6t1xtj6"]

[ext_resource type="Script" path="res://Autoload/Global.gd" id="1_iftkh"]

[node name="Global" type="Node"]
script = ExtResource("1_iftkh")

[node name="tick_timer" type="Timer" parent="."]

[node name="invasion_timer" type="Timer" parent="."]
wait_time = 10.0

[node name="spawn_enemy_timer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="tick_timer" to="." method="_on_tick_timer_timeout"]
[connection signal="timeout" from="tick_timer" to="." method="_on_day_night_timer_timeout"]
[connection signal="timeout" from="invasion_timer" to="." method="_on_invasion_timer_timeout"]
[connection signal="timeout" from="spawn_enemy_timer" to="." method="_on_spawn_enemy_timer_timeout"]
